{
  "version": 4,
  "terraform_version": "1.2.5",
  "serial": 21,
  "lineage": "2e37363f-6b90-a470-b187-c947784e9100",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220621",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/zones/us-central1-b/disks/managment-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iti-ezzat/zones/us-central1-b/instances/managment-vm",
            "instance_id": "1463386581716435489",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "e1BdfOfMdes=",
            "name": "managment-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/regions/us-central1/subnetworks/restricted",
                "subnetwork_project": "iti-ezzat"
              }
            ],
            "project": "iti-ezzat",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/zones/us-central1-b/instances/managment-vm",
            "service_account": [
              {
                "email": "vm--managment-sa@iti-ezzat.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "google_service_account.managmet-sa",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.restricted_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20220621",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/zones/us-central1-a/disks/managment-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iti-ezzat/zones/us-central1-a/instances/managment-vm",
            "instance_id": "1934783908449616416",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "e1BdfOfMdes=",
            "name": "managment-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/regions/us-central1/subnetworks/managment",
                "subnetwork_project": "iti-ezzat"
              }
            ],
            "project": "iti-ezzat",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/zones/us-central1-a/instances/managment-vm",
            "service_account": [
              {
                "email": "vm--managment-sa@iti-ezzat.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_service_account.managmet-sa",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "restricted_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-30T16:20:32.998-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iti-ezzat/global/firewalls/task-firewall-2",
            "log_config": [],
            "name": "task-firewall-2",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
            "priority": 1200,
            "project": "iti-ezzat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/firewalls/task-firewall-2",
            "source_ranges": [
              "10.0.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-07-30T16:20:32.516-07:00",
            "deny": [],
            "description": "allow ssh from only IAP ",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iti-ezzat/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
            "priority": 700,
            "project": "iti-ezzat",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/firewalls/allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iti-ezzat/global/networks/gcp-project-vpc",
            "mtu": 1460,
            "name": "gcp-project-vpc",
            "project": "iti-ezzat",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T16:20:32.987-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iti-ezzat/regions/us-central1/routers/gcp-router",
            "name": "gcp-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
            "project": "iti-ezzat",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/regions/us-central1/routers/gcp-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "mynat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "iti-ezzat/us-central1/gcp-router/router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iti-ezzat",
            "region": "us-central1",
            "router": "gcp-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/iti-ezzat/regions/us-central1/subnetworks/managment",
                "source_ip_ranges_to_nat": [
                  "PRIMARY_IP_RANGE"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_router.router",
            "module.network.google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T16:20:33.079-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/iti-ezzat/regions/us-central1/subnetworks/managment",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "managment",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iti-ezzat",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/regions/us-central1/subnetworks/managment",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-07-30T16:20:33.140-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/iti-ezzat/regions/us-central1/subnetworks/restricted",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "restricted",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/global/networks/gcp-project-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iti-ezzat",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-ezzat/regions/us-central1/subnetworks/restricted",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}